Add Google's logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         </div>
         <div class="img-box">
-            
+            <img id="logo" src="images/google_logo.png">
         </div>
         <div class="main-box">
             <form id="search-form" action="https://www.google.com/search">
