Add links to image and advanced search

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <div class="top-box">
-
+            <a class="page-links" href="pages/imagesearch.html">Image Search</a>
+            <a class="page-links" href="pages/advancedsearch.html">Advanced Search</a>
         </div>
         <div class="img-box">
             <img id="logo" src="images/google_logo.png">
